--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "loadash": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-highlight-words": "^0.17.0",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
