--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "comp4513-assignment1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://phuan516.github.io/comp4513-assignment1",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "gh-pages": "^3.2.3",
     "loadash": "^1.0.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
